Task is in working condition, nearly ready for 0.0.1 release
 - need to finish up unit tests
 - in it's basic for this is ready for NPM

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gruntplugin"
   ],
   "dependencies": {
-    "explainjs": "0.0.9"
+    "explainjs": "0.0.9",
+    "handlebars": "1.0.10"
   }
 }
